# prediq

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analytics.md  exchanges.md  research.md
examples/: divergence_scanner.py  market_quality.py  research_export.py
src/arbiter/: __init__.py  __main__.py  cli.py  engine.py  exceptions.py  models.py  storage.py
src/arbiter/analytics/: __init__.py  divergence.py  efficiency.py  liquidity.py  quality.py  violations.py
src/arbiter/exchanges/: __init__.py  base.py  kalshi.py  manifold.py  metaculus.py  polymarket.py
src/arbiter/matching/: __init__.py  normalizer.py  semantic.py
src/arbiter/output/: __init__.py  alerts.py  api.py  dashboard.py  export.py
tests/: conftest.py  test_alerts_extended.py  test_analytics.py  test_analytics_extended.py  test_api.py  test_cli.py  test_coverage_gaps.py  test_dashboard.py  test_engine.py  test_engine_extended.py  test_exceptions.py  test_exchanges.py  test_exchanges_extended.py  test_init.py  test_matching.py  test_matching_extended.py  test_models.py  test_output.py  test_storage.py
