[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arbiter"
version = "0.1.0"
description = "Cross-exchange prediction market analytics engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sushaan Kandukoori", email = "sushaan@users.noreply.github.com" },
]
keywords = [
    "prediction-markets",
    "analytics",
    "arbitrage",
    "polymarket",
    "kalshi",
    "quantitative-finance",
    "market-microstructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "duckdb>=0.10,<2",
    "pyarrow>=15,<19",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "apscheduler>=3.10,<4",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "structlog>=24,<26",
]

[project.optional-dependencies]
matching = [
    "sentence-transformers>=2.5,<4",
    "torch>=2.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "respx>=0.21,<1",
]
all = ["arbiter[matching,dev]"]

[project.urls]
Homepage = "https://github.com/sushaan-k/arbiter"
Repository = "https://github.com/sushaan-k/arbiter"
Issues = "https://github.com/sushaan-k/arbiter/issues"
Documentation = "https://github.com/sushaan-k/arbiter#readme"

[project.scripts]
arbiter = "arbiter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/arbiter"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "RUF"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "RUF012",  # Mutable class-level defaults (used intentionally for constants)
    "SIM105",  # contextlib.suppress -- try/except is clearer for date parsing
]

[tool.ruff.lint.isort]
known-first-party = ["arbiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests as integration tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "sentence_transformers"]
ignore_missing_imports = true
